# cosmic-screenshot

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
debian/: changelog  control  copyright  cosmic-screenshot.install  libcosmic-screenshot-dev.install  rules
i18n/af/: cosmic_screenshot.ftl
i18n/ar/: cosmic_screenshot.ftl
i18n/be/: cosmic_screenshot.ftl
i18n/bg/: cosmic_screenshot.ftl
i18n/cs/: cosmic_screenshot.ftl
i18n/de/: cosmic_screenshot.ftl
i18n/el/: cosmic_screenshot.ftl
i18n/en/: cosmic_screenshot.ftl
i18n/es/: cosmic_screenshot.ftl
i18n/es-419/: cosmic_screenshot.ftl
i18n/et/: cosmic_screenshot.ftl
i18n/fr/: cosmic_screenshot.ftl
i18n/ga/: cosmic_screenshot.ftl
i18n/hu/: cosmic_screenshot.ftl
i18n/id/: cosmic_screenshot.ftl
i18n/is/: cosmic_screenshot.ftl
i18n/it/: cosmic_screenshot.ftl
i18n/ja/: cosmic_screenshot.ftl
i18n/kab/: cosmic_screenshot.ftl
i18n/kk/: cosmic_screenshot.ftl
i18n/ko/: cosmic_screenshot.ftl
i18n/lt/: cosmic_screenshot.ftl
i18n/nb-NO/: cosmic_screenshot.ftl
i18n/nl/: cosmic_screenshot.ftl
i18n/nn/: cosmic_screenshot.ftl
i18n/pl/: cosmic_screenshot.ftl
i18n/pt/: cosmic_screenshot.ftl
i18n/pt-BR/: cosmic_screenshot.ftl
i18n/ru/: cosmic_screenshot.ftl
i18n/sr/: cosmic_screenshot.ftl
i18n/sr-Cyrl/: cosmic_screenshot.ftl
i18n/sv/: cosmic_screenshot.ftl
i18n/tr/: cosmic_screenshot.ftl
i18n/uk/: cosmic_screenshot.ftl
i18n/zh-Hans/: cosmic_screenshot.ftl
i18n/zh-Hant/: cosmic_screenshot.ftl
resources/: com.system76.CosmicScreenshot.desktop  com.system76.CosmicScreenshot.service  com.system76.CosmicScreenshot.xml
src/: app.rs  dbus.rs  error.rs  error_handling.rs  lib.rs  localize.rs  main.rs  notifications.rs  screenshot.rs  settings.rs  snipper.rs  ui.rs
src/screenshot/: freedesktop_portal.rs  kwin_screenshot2.rs  windows_native.rs  xorg_native.rs
