[package]
name = "cosmic-screenshot"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
chrono = { version = "0.4.41", default-features = false, features = [
    "alloc",
    "clock",
] }
dirs = "6"
tokio = { version = "1.47.1", default-features = false, features = ["macros"] }
clap = { version = "4.5.46", features = ["derive"] }
zbus = { version = "5", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
