[package]
name = "cosmic-screenshot"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
chrono = { version = "0.4.41", default-features = false, features = [
    "alloc",
    "clock",
] }
dirs = "6"
tokio = { version = "1.47.1", default-features = false, features = ["macros", "process"] }
clap = { version = "4.5.46", features = ["derive"] }
zbus = { version = "5", default-features = false }
wl-clipboard-rs = "0.8"

# Internationalization
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = "8.5"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
